feat(client): complete Vite React+TS setup with TaskContext and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,10 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "esnext",
     "target": "esnext",
     "types": [],
+    "lib": ["esnext", "dom"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -34,11 +35,13 @@
 
     // Recommended Options
     "strict": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
