--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["jest", "node"]
   },
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true,
   "include": ["src"]
 }
