implemented a build command

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "serve": "nodemon --watch src --exec ts-node src/index.ts"
+    "serve": "nodemon --watch src --exec ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
