--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,13 +14,14 @@ jobs:
         working-directory: ./client
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: "npm"
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
@@ -29,27 +30,60 @@ jobs:
       - name: Lint code
         run: npm run lint
 
+      - name: Type-check
+        run: npm run tsc -- --noEmit
+
+      - name: Run frontend tests
+        run: npm test -- --coverage --watchAll=false
+
       - name: Build frontend
         run: npm run build
 
   backend-ci:
     runs-on: ubuntu-latest
+    needs: frontend-ci
     defaults:
       run:
         working-directory: ./server
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: "npm"
           cache-dependency-path: server/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint code
+        run: npm run lint
+
+      - name: Type-check
+        run: npm run tsc -- --noEmit
+
+      - name: Run backend tests
+        run: npm test -- --coverage
+
       - name: Build backend
         run: npm run build
+
+  codeql-analysis:
+    runs-on: ubuntu-latest
+    needs: [frontend-ci, backend-ci]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: javascript, typescript
+
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v2
