--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "serve": "nodemon --watch src --exec ts-node src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
